Solved responsive and visibility  issues

--- a/_sass/layouts/footer.scss
+++ b/_sass/layouts/footer.scss
@@ -70,7 +70,9 @@ footer {
       transition: transform 0.3s;
 
       &:hover {
-        transform: scale(1.02);
+        @media screen and (min-width: 900px) {
+          transform: scale(1.02);
+        }
       }
     }
 
